--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
             git pull
             npm i
             composer i
-            php artisan migrate:fresh --seed
+            php artisan migrate
             npm run build
